--- a/roles/mongo/tasks/main.yaml
+++ b/roles/mongo/tasks/main.yaml
@@ -1,13 +1,19 @@
+- name: Setup the MongoDB repo file
+  copy:
+    src: /home/centos/Anisible-Roboshop-Roles/mongo.repo
+    dest: /etc/yum.repos.d/mongo.repo
+
 - name: Install MongoDB
   dnf:
     name: mongodb-org
     state: present
 
 - name: Start MongoDB Service
-  Service:
+  service:
     name: mongod
     state: started
     enabled: yes
+
 - name: Updating listen address
   replace:
     path: /etc/mongod.conf
@@ -15,7 +21,7 @@
     replace: '0.0.0.0'
 
 - name: Restarting MongoDB
-  Service:
+  service:
     name: mongod
     state: restarted 
 
