--- a/inventory.ini
+++ b/inventory.ini
@@ -20,5 +20,5 @@ rabbitmq.gonepudirobot.online
 payment.gonepudirobot.online
 [dispatch]
 dispatch.gonepudirobot.online
-[localhost]
-localhost
+[all:vars]
+ansible_password=DevOps321
