--- a/roles/web/tasks/main.yaml
+++ b/roles/web/tasks/main.yaml
@@ -1,22 +1,21 @@
-
 - name: Install {{component}} Server
   dnf:
     name: nginx
     state: present
 
 - name: Set Start Time
-  ansible.builtin.shell: date +%Y-%m-%d_%H-%M-%S
+  ansible.builtin.command: date +%Y-%m-%d_%H-%M-%S
   register: current_time_result
 
 - name: Enable and Start NGINX
-  service:
+  ansible.builtin.service:
     name: nginx
     state: started
-    enabled: true
+    enabled: yes
 
 - name: Download Frontend Code
   get_url:
-    url: https://roboshop-builds.s3.amazonaws.com/web.zip
+    url: "https://roboshop-builds.s3.amazonaws.com/{{component}}.zip"
     dest: /tmp    
 
 - name: Create Backup Folder
@@ -32,7 +31,7 @@
   ignore_errors: yes  
 
 - name: Remove Old HTML Content
-  shell: rm -rf /usr/share/nginx/html/*
+  ansible.builtin.shell: rm -rf /usr/share/nginx/html/*
 
 - name: Extract New HTML Code
   unarchive:
@@ -46,6 +45,6 @@
     dest: /etc/nginx/default.d/roboshop.conf
 
 - name: Restart NGINX Server
-  service:
+  ansible.builtin.service:
     name: nginx
     state: restarted
