--- a/inventory.ini
+++ b/inventory.ini
@@ -14,7 +14,7 @@ redis.gonepudirobot.online
 mysql.gonepudirobot.online
 [shipping]
 shipping.gonepudirobot.online
-[rabbitmq]
+[rabbit]
 rabbitmq.gonepudirobot.online
 [payment]
 payment.gonepudirobot.online
