--- a/inventory.ini
+++ b/inventory.ini
@@ -15,7 +15,7 @@ mysql.gonepudirobot.online
 [shipping]
 shipping.gonepudirobot.online
 [rabbit]
-rabbitmq.gonepudirobot.online
+rabbit.gonepudirobot.online
 [payment]
 payment.gonepudirobot.online
 [dispatch]
