--- a/roles/catalogue/tasks/main.yaml
+++ b/roles/catalogue/tasks/main.yaml
@@ -5,28 +5,11 @@
   - dnf module enable nodejs:18 -y
   - dnf install nodejs -y
 
-- name: Creating roboshop user
-  user:
-    name: roboshop
-    state: present
-
-- name: Creating App directory
-  file:
-    path: /app
-    state: directory  
-
-- name: Downloading App Code
-  get_url:
-    url: "https://roboshop-builds.s3.amazonaws.com/{{ component }}.zip"
-    dest: /tmp
-
-- name: unzipping app copde
-  unarchive:
-    src: "/tmp/{{ component }}.zip"
-    dest: /app
-    remote_src: yes
-  
-
+- name: "app-setup {{component}}"
+  import:
+    name: common
+    task_from: app-setup
+      
 - name: Npm Installation
   shell: npm install
   args:
