--- a/inventory.ini
+++ b/inventory.ini
@@ -2,7 +2,7 @@
 mongo.gonepudirobot.online
 [catalogue]
 catalogue.gonepudirobot.online
-[user]
+[users]
 user.gonepudirobot.online
 [cart]
 cart.gonepudirobot.online
