--- a/roles/common/tasks/mongo-setup.yaml
+++ b/roles/common/tasks/mongo-setup.yaml
@@ -24,4 +24,4 @@
 
 - name: LOAD DATA INTO MONGODB
   shell: "mongo --host mongo.gonepudirobot.online < /app/schema/{{ component }}.js"
-  when: product_count.stdout == "0" 
+  when: element_count == "0" 
