--- a/roles/users/tasks/main.yaml
+++ b/roles/users/tasks/main.yaml
@@ -1,79 +1,25 @@
 
-- name: DISABLING NODE.JS MODULE
-  shell: "{{item}}"
-  loop:
-    - dnf module disable nodejs -y
-    - dnf module enable nodejs:18 -y
-    - dnf install nodejs -y
+- name: app setup {{component}}
+  import_role:
+    name: common
+    tasks_from: app-setup
 
-- name: CONFIGURE APPLICATION USER
-  user:
-    name: roboshop
-
-- name: Create a directory if it does not exist
-  ansible.builtin.file:
-    path: /app
-    state: absent
-
-- name: CREATE APP DIRECTORY
-  file:
-    path: /app
-    state: directory
-
-- name: DOWNLOAD APPLICATION CODE INTO APP DIRECTORY
-  get_url:
-    url: "https://roboshop-builds.s3.amazonaws.com/{{component}}.zip"
-    dest: /tmp
-
-- name: UNZIP APP CODE
-  unarchive:
-    src: "/tmp/{{component}}.zip"
-    dest: /app
-    remote_src: yes
-
-- name: INSTALL NPM DEPENDENCIES
-  shell: npm install
-  args:
-    chdir: /app
+- name: Nodejs setup
+  import_role:
+    name: common
+    tasks_from: nodejs-setup 
 
 - name: COPY USER SERVICE FILE
   copy:
     src: "{{component}}.service"
     dest: "/etc/systemd/system/{{component}}.service"
 
-- name: RELOAD SYSTEMD DAEMON
-  ansible.builtin.systemd:
-    daemon_reexec: yes
+- name: mongo-setup
+  import_role:
+    name: common
+    tasks_from: mongo-setup
 
-- name: START USER SERVICE
-  ansible.builtin.systemd:
-    name: "{{component}}"
-    state: started
-    enabled: yes
-
-- name: COPY MONGO REPO FILE
-  copy:
-    src: mongo.repo
-    dest: /etc/yum.repos.d/mongo.repo
-
-- name: INSTALL MONGODB SHELL
-  dnf:
-    name: mongodb-org-shell
-    state: present
-
-- name: VERIFY USER COUNT
-  command: mongo --host mongo.gonepudirobot.online --quiet --eval 'db = db.getSiblingDB("users"); db.users.count()'
-  register: user_count
-
-- name: PRINT USER COUNT
-  debug:
-    msg: "user Count: {{ user_count.stdout }}"
-
-- name: LOAD DATA INTO MONGODB
-  shell: "mongo --host mongo.gonepudirobot.online < /app/schema/{{component}}.js"
-  when: user_count.stdout == "0"
-
-- name: RESTART USER SERVICE
-  systemd:
-    name: "{{component}}"
-    state: restarted
+- name: APP START SETUP 
+  import_role:
+    name: common
+    tasks_from: systemd-setup 
