--- a/roles/payment/tasks/main.yaml
+++ b/roles/payment/tasks/main.yaml
@@ -1,56 +1,15 @@
-- name: INSTALLING PYTHON
-  dnf:
-    name: "{{item}}"
-    state: present
-  loop:
-  - python36
-  - gcc
-  - python3-devel
+- name: app setup
+  import_role:
+    name: common
+    tasks_from: app-setup
 
-- name: CONFIGURE APPLICATION USER
-  user:
-    name: roboshop
+- name: python setup
+  import_role:
+    name: common
+    tasks_from: python-setup
 
-- name: Create a directory if it does not exist
-  ansible.builtin.file:
-    path: /app
-    state: absent
+- name: servicefile-setup
+  import_role:
+    name: common
+    tasks_from: systemd-setup     
 
-- name: CREATE APP DIRECTORY
-  file:
-    path: /app
-    state: directory
-
-- name: DOWNLOAD APPLICATION CODE INTO APP DIRECTORY
-  get_url:
-    url: "https://roboshop-builds.s3.amazonaws.com/{{component}}.zip"
-    dest: /tmp
-
-- name: UNZIP APP CODE
-  unarchive:
-    src: "/tmp/{{component}}.zip"
-    dest: /app
-    remote_src: yes
-
-- name: PIP 3.6 INSTALLATION
-  shell: pip3.6 install -r requirements.txt
-  args:
-    chdir: /app
-
-- name: COPYING SERVICE FILE
-  copy:
-    src: "{{component}}.service"
-    dest: "/etc/systemd/system/{{component}}.service"
-- name: UNMASK PAYMENT SERVICE
-  command: systemctl unmask payment.service
-  ignore_errors: true      
-
-- name: DAEMON RELOAD 
-  systemd:
-    daemon_reexec: yes  
-
-- name: STARTE AND ENABLE THE PAYMENT
-  systemd:
-    name: "{{component}}"
-    state: restarted
-    enabled: true
