--- a/roles/cart/tasks/main.yaml
+++ b/roles/cart/tasks/main.yaml
@@ -1,55 +1,14 @@
-- name: DISABLING NODE.JS MODULE
-  shell: "{{item}}"
-  loop:
-    - dnf module disable nodejs -y
-    - dnf module enable nodejs:18 -y
-    - dnf install nodejs -y
+- name: app setup {{component}}
+  import_role:
+    name: common
+    tasks_from: app-setup
 
-- name: CONFIGURE APPLICATION USER
-  user:
-    name: roboshop
+- name: Nodejs setup
+  import_role:
+    name: common
+    tasks_from: nodejs-setup 
 
-- name: Create a directory if it does not exist
-  ansible.builtin.file:
-    path: /app
-    state: absent
-
-- name: CREATE APP DIRECTORY
-  file:
-    path: /app
-    state: directory
-
-- name: DOWNLOAD APPLICATION CODE INTO APP DIRECTORY
-  get_url:
-    url: "https://roboshop-builds.s3.amazonaws.com/{{component}}.zip"
-    dest: /tmp
-
-- name: UNZIP APP CODE
-  unarchive:
-    src: "/tmp/{{component}}.zip"
-    dest: /app
-    remote_src: yes
-
-- name: INSTALL NPM DEPENDENCIES
-  shell: npm install
-  args:
-    chdir: /app
-
-- name: COPY CART SERVICE FILE
-  copy:
-    src: "{{component}}.service"
-    dest: "/etc/systemd/system/{{component}}.service"
-
-- name: RELOAD SYSTEMD DAEMON
-  ansible.builtin.systemd:
-    daemon_reexec: yes
-
-- name: START cart SERVICE
-  ansible.builtin.systemd:
-    name: "{{component}}"
-    state: started
-
-- name: RESTART CART SERVICE
-  systemd:
-    name: "{{component}}"
-    state: restarted
+- name: APP START SETUP 
+  import_role:
+    name: common
+    tasks_from: systemd-setup   
