--- a/main.yaml
+++ b/main.yaml
@@ -2,5 +2,7 @@
 - name: Installing {{component}}
   hosts: "{{component}}"
   become: yes
+  vars_files:
+    - variables.yaml
   roles:
   - "{{component}}"
