--- a/roles/web/tasks/main.yaml
+++ b/roles/web/tasks/main.yaml
@@ -41,7 +41,7 @@
 
 - name: Copy Main Configuration File
   copy:
-    src: roboshop.conf
+    src: roboshop.conf.j2
     dest: /etc/nginx/default.d/roboshop.conf
   notify: Restart NGINX Server  
 
