--- a/roles/web/tasks/main.yaml
+++ b/roles/web/tasks/main.yaml
@@ -42,7 +42,7 @@
 - name: Copy Main Configuration File
   copy:
     src: roboshop.conf.j2
-    dest: /etc/nginx/default.d/roboshop.conf.j2
+    dest: /etc/nginx/default.d/roboshop.conf
   notify: Restart NGINX Server  
 
 
