--- a/roles/web/tasks/main.yaml
+++ b/roles/web/tasks/main.yaml
@@ -7,6 +7,9 @@
   ansible.builtin.command: date +%Y-%m-%d_%H-%M-%S
   register: current_time_result
 
+- name: Print the value of a variable
+  debug:
+    var: variables.yaml
 
 - name: Download Frontend Code
   get_url:
