--- a/roles/payment/files/payment.service
+++ b/roles/payment/files/payment.service
@@ -4,11 +4,11 @@ Description=Payment Service
 [Service]
 User=root
 WorkingDirectory=/app
-Environment=CART_HOST={{CART_HOST}}
+Environment=CART_HOST=cart.gonepudirobot.online
 Environment=CART_PORT=8080
-Environment=USER_HOST={{USER_HOST}}
+Environment=USER_HOST=user.gonepudirobot.online
 Environment=USER_PORT=8080
-Environment=AMQP_HOST={{RABBITMQ_HOST}}
+Environment=AMQP_HOST=rabbit.gonepudirobot.online
 Environment=AMQP_USER=roboshop
 Environment=AMQP_PASS=roboshop123
 
